--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: WP Bootstrap Starter Child
 Theme URL: https://github.com/d3vdigital/wp-bootstrap-starter-child
 Description: Child Theme for WP Bootstrap Starter By Afterimage Designs
-Author: Zac Dreyer </D3V.Digital>
+Author: Zac Dreyer (D3V.Digital)
 Author URL: https://d3v.digital
 Template: wp-bootstrap-starter
 Version: 1.0.0
